--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,12 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* gobal stylings */
+* {
+    
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-begin-btn {
-  display: block;
-  text-decoration: none;
-  color: whitesmoke
+img {
+  width: 100%;
+  object-fit: contain;
+  /* takes the image and fits it into 100% of it's container */
 }
