--- a/src/components/Greeting.css
+++ b/src/components/Greeting.css
@@ -10,7 +10,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 1.5rem 1rem;
-    z-index: 50; 
+    z-index: 0;
     /* z-index lets sidedrawer and backdrop components slide over the navbar */
     background: black;
     padding-top: 350px;
@@ -53,7 +53,7 @@ h2 {
     transform: rotate(3.142rad);
     color:rgba(250, 250, 0, 0.674);
     transition: 500ms linear;
-    text-shadow: 5px 5px 2px blue;
+    text-shadow: 5px 5px 2px rgb(175, 175, 193);
 }
 
 .react-icons {
@@ -86,13 +86,14 @@ h2 {
 .vscode-icon4:hover {
     /* transform: rotate(-0.90turn); */
     color: rgb(35, 3, 3);
-    font-size: 5rem;
+    font-size: 10rem;
     opacity:0.8;
     background:rgb(255, 0, 0) ;
     border-radius: 50%;
     animation-name: rotate;
     animation-duration: 0.7s;
-    animation-direction: normal
+    animation-direction: normal;
+   
 
 }
 @keyframes rotate {
