--- a/src/components/Greeting.css
+++ b/src/components/Greeting.css
@@ -1,5 +1,5 @@
 .greeting-main {
-    height: 75px;
+    height: 100vh;
     width: 100%;
     /* background-color: #5c5959; */
      /* matte black  */
@@ -12,12 +12,21 @@
     padding: 1.5rem 1rem;
     z-index: 0;
     /* z-index lets sidedrawer and backdrop components slide over the navbar */
-    background: black;
-    padding-top: 350px;
+    /* background: black; */
+    padding: 15px;
+    color: white;
+    background-image: url('https://images.pexels.com/photos/633409/pexels-photo-633409.jpeg?auto=compress&cs=tinysrgb&w=1600');
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.8
+    
+    
    
     
     
 }
+
+
 
 h2 {
     font-size:1.6rem;
