projects page added, fonts, styling

--- a/src/components/Greeting.css
+++ b/src/components/Greeting.css
@@ -26,7 +26,16 @@
     
 }
 
+button {
+    
+    cursor: pointer;
+    border: 0;
+    background-color:whitesmoke;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
 
+}
 
 h2 {
     font-size:1.6rem;
@@ -90,12 +99,12 @@ h2 {
 }
 .vscode-icon4{
     font-size: 3.5rem;
-    padding-right: 15px; 
+    padding: 5px
 }
 .vscode-icon4:hover {
     /* transform: rotate(-0.90turn); */
-    color: rgb(35, 3, 3);
-    font-size: 10rem;
+    color: rgb(0, 0, 0);
+    font-size: 9rem;
     opacity:0.8;
     background:rgb(255, 0, 0) ;
     border-radius: 50%;
