--- a/src/Pages/About.css
+++ b/src/Pages/About.css
@@ -5,9 +5,10 @@
     background-image: url('https://images.pexels.com/photos/4050383/pexels-photo-4050383.jpeg?auto=compress&cs=tinysrgb&w=1600');     
     background-repeat: no-repeat;
     background-size:cover;
-    height:100vh;
-    padding: 75px;
+    height: 1100px;
+    padding: 45px;
     opacity: 0.9;
+    padding-bottom: 0;
     
 
 }
@@ -23,7 +24,7 @@
     
 }
 .about-content {
-    height: 500px;
+    height: 600px;
     width: 1200px;
     background-color: #3f3838;
     opacity:0.87;
@@ -34,10 +35,11 @@
     justify-content: center;
     align-items: center;
     padding-left: 15px;
+    padding-right: 15px;
 }
 p {
-    font-size: 2.7rem;
-    font-style: italic ;
+    font-size: 2.5rem;
+     ;
     line-height: 1.5
 }
 @media(max-width: 1360px){
