--- a/src/Pages/Contact.css
+++ b/src/Pages/Contact.css
@@ -3,6 +3,7 @@
     font-size: 50px;
     opacity: 0.7;
     margin-bottom: 30px;
+    border-bottom: 1px solid whitesmoke;
 }
 
 .service-top {
@@ -18,6 +19,7 @@
 
 form .input-row .side {
     width: 100%;
+    padding: 10px;
     
 }
 
@@ -25,9 +27,10 @@ form .input-row .side {
     text-align: center;
     color:whitesmoke;
     line-height: 1.5;
-    font-size: 20px;
+    font-size: 23px;
     margin-bottom: 50px;
-    opacity: 0.89
+    opacity: 0.8;
+    padding-top: 25px
 }
 
 form .input-row {
@@ -64,7 +67,7 @@ form .input-row {
     line-height: 1.4;
     resize: none;
  }
- button {
+ form button {
     border: 1px solid whitesmoke;
     background: transparent;
     display: block;
@@ -77,16 +80,17 @@ form .input-row {
     cursor: pointer;
  }
 
- button:hover {
-    color:black
+ form button:hover {
+    color:black;
+    font-size: 14px
     
  }
- button:hover::after {
+ form button:hover::after {
     width: 100%;
     right: unset;
     left: 0;
  }
- button::after {
+ form button::after {
     content:'';
     height: 100%;
     width: 0;
@@ -99,3 +103,10 @@ form .input-row {
     background-color: rgb(6, 201, 201);
     right:0
  }
+
+ /* @media(max-width:750px) {
+    form .input-row .side {
+        width: 100%;
+  
+    }
+ } */
