--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -18,6 +18,7 @@
     font-size: 2.3rem;
     color: whitesmoke;
     cursor: pointer;
+   
     
 }
 
@@ -33,4 +34,19 @@
     opacity:0.5;
     font-family: cursive ;
     font-style: italic;
+}
+
+.footer button {
+    background: transparent;
+    outline: none;
+    border: 0;
+    border-radius: 55%;
+   
+
+}
+.footer button:hover{
+    background: rgb(250, 2, 2);
+    transition: all 0.3s linear;
+   
+   
 }
