--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -21,7 +21,8 @@
     padding: 15px;
     text-decoration: none;
     font-style: italic;
-    color: whitesmoke
+    color: whitesmoke;
+    font-family: 'Gruppo', cursive;
 
 }
 .navbar__logo{
@@ -31,11 +32,17 @@
     padding-left: 0px;
    
 }
+.navbar__logo h2:hover{
+    font-size:3.2rem;
+    
+   
+}
 .navbar__logo h2 {
     color: whitesmoke;
     cursor: pointer;    
     font-size: 3rem;
     font-style: oblique;
+   
     -webkit-box-shadow: 5px 5px 15px 5px #000000; 
         box-shadow: 5px 5px 15px 5px #000000;
    
