--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -22,7 +22,6 @@
     height:650px;
     padding: 1rem;
     /* moves card off the left edge of screen */
-  
     margin: 8px auto;
     background: whitesmoke;
     box-shadow: 2px 4px 5px rgba(0 , 0 , 0, 0.4);
@@ -105,6 +104,15 @@
     font-size: 3.5rem;
     padding-right: 15px;    
   
+  }
+  .render-alert-banner {
+    background-color: rgb(243, 146, 18);
+    padding-left: 25px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 20px;
+    color:rgba(0, 0, 0, 0.4)
   }
   
   
