--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -5,14 +5,12 @@
     margin-top: auto;
     color:rgb(20, 20, 20);
     justify-content: space-evenly;
-  
+    align-items: center;
     text-align: center;
     display: flex;
     opacity: 0.5;
     border-top: 1px solid whitesmoke;
     position:fixed
-    
-
 }
 
 .footer-icon{
