--- a/src/Pages/Contact.css
+++ b/src/Pages/Contact.css
@@ -69,7 +69,7 @@ form .input-row {
  }
  form button {
     border: 1px solid whitesmoke;
-    background: transparent;
+    background: none;
     display: block;
     position: relative;
     margin: 80px auto 0;
