--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,9 +1,9 @@
-.footer{
-    height: 150px;
+.footer {
+    height:150px;
     width:100%;
-    background: rgb(7, 7, 7);
+    /* background: rgb(7, 7, 7); */
     margin-top: auto;
-    color:rgb(20, 20, 20);
+    /* color:rgb(20, 20, 20); */
     justify-content: space-evenly;
     align-items: center;
     text-align: center;
@@ -34,7 +34,6 @@
     font-family: cursive ;
     font-style: italic;
 }
-
 .footer button {
     background: transparent;
     outline: none;
