testing bad selector

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,14 +1,12 @@
-:is(.footer) {
+.footer {
     height:150px;
     width:100%;
-    /* background: rgb(7, 7, 7); */
     margin-top: auto;
-    /* color:rgb(20, 20, 20); */
     justify-content: space-evenly;
     align-items: center;
     text-align: center;
     display: flex;
-    opacity: 0.5;
+    opacity: 0.6;
     border-top: 1px solid whitesmoke;
     position:fixed
 }
