--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,4 +1,4 @@
-.footer {
+#footer {
     height:150px;
     width:100%;
     margin-top: auto;
@@ -19,20 +19,20 @@
     
 }
 
-.footer p {
+#footer p {
     font-size: 17px;
     color: whitesmoke;
     opacity:0.5;
     font-style: italic;
 }
-.footer h6 {
+#footer h6 {
     font-size: 17px;
     color: whitesmoke;
     opacity:0.5;
     font-family: cursive ;
     font-style: italic;
 }
-.footer button {
+#footer button {
     background: transparent;
     outline: none;
     border: 0;
@@ -40,7 +40,7 @@
    
 
 }
-.footer button:hover{
+#footer button:hover{
     background: rgb(250, 2, 2);
     transition: all 0.3s linear;
    
