--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,13 +1,13 @@
 .footer__container {
     height: 150px;
-    /* width: 100%;
+    width: 100%;
     justify-content: space-evenly;
     align-items: center;
     text-align: center;
     display: flex;
     opacity: 0.6;
     border-top: 1px solid whitesmoke;
-    position:fixed */
+    position:fixed
 }
 
 .footer__icon{
@@ -17,7 +17,9 @@
    
     
 }
-
+.footer__container a {
+    
+}
 .footer__container p {
     font-size: 17px;
     color: whitesmoke;
