--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,24 +1,21 @@
 .footer {
+    display: flex;
     height: 100px;
-    width: 100vw;
+    width: 100%;
     justify-content: space-evenly;
     align-items: center;
     text-align: center;
-    display: flex;
-    opacity: 0.6;
     border-top: 1px solid whitesmoke;
-    position: fixed
+    opacity:0.6;
+    position: fixed;
+    background:black
 }
-
 .footer__icon{
     font-size: 2.3rem;
     color: whitesmoke;
     cursor: pointer;
-   
+  
     
-}
-.footer a {
-
 }
 .footer p {
     font-size: 17px;
