--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,6 @@
 .footer {
     display: flex;
-    height: 100px;
+    height: 50px;
     width: 100%;
     justify-content: space-evenly;
     align-items: center;
@@ -11,7 +11,7 @@
     background:black
 }
 .footer__icon{
-    font-size: 2.3rem;
+    font-size: 33px;
     color: whitesmoke;
     cursor: pointer;
   
