--- a/src/Pages/Contact.css
+++ b/src/Pages/Contact.css
@@ -52,14 +52,14 @@ form .input-row {
         width: 100%;
  }
 
- input:-webkit-autofill,
+ /* input:-webkit-autofill,
  input:-webkit-autofill:hover,
  input:-webkit-autofill:focus,
  input:-webkit-autofill:active{
     box-shadow: 0 0 0 30px black inset !important;
     -webkit-box-shadow: 0 0 0 30px black inset !important;
     -webkit-text-fill-color: whitesmoke !important;
- }
+ } */
 
  .textarea {
     width: 100%;
