--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,6 @@
-/* .footer {
+.footer {
     display: flex;
-    height: 50px;
+    /* height: 50px;
     width: 100%;
     justify-content: space-evenly;
     align-items: center;
@@ -8,8 +8,8 @@
     border-top: 1px solid whitesmoke;
     opacity:0.6;
     position:fixed;
-    background:black
-} */
+    background:black */
+}
 .footer__icon{
     font-size: 33px;
     color: whitesmoke;
