--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -10,6 +10,7 @@
     padding-right: 25px;
     padding-left: 25px;
     background:black;
+    position:fixed;
   
 }
 
@@ -44,6 +45,7 @@
     display: flex;
     justify-content:center;
     text-align: center;
+    background: black;
 
 
 }
@@ -52,5 +54,6 @@
     text-align: center;
     padding-left: 15px;
     justify-content: center;
+    background:black;
     
 }
