--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 .container__footer {
-    
+    display: flex;
     justify-content:space-between;
     align-items: center;
     text-align: center;
@@ -46,6 +46,8 @@
     justify-content:center;
     text-align: center;
     background: black;
+    opacity: 0.6;
+
 
 
 }
@@ -55,5 +57,6 @@
     padding-left: 15px;
     justify-content: center;
     background:black;
+    
     
 }
