--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -47,6 +47,7 @@
     text-align: center;
     background: black;
     opacity: 0.7;
+    position: fixed;
 
 
 
@@ -58,6 +59,7 @@
     justify-content: center;
     background:black;
     opacity:0.7;
+    position: fixed;
     
     
     
