--- a/src/Pages/About.css
+++ b/src/Pages/About.css
@@ -2,12 +2,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-image: url('https://images.pexels.com/photos/6438721/pexels-photo-6438721.jpeg?auto=compress&cs=tinysrgb&w=1600');     
+    background-image: url('https://images.pexels.com/photos/4497194/pexels-photo-4497194.jpeg?auto=compress&cs=tinysrgb&w=1600');     
     background-repeat: no-repeat;
     background-size:cover;
-    height: 1000px;
+    height: 100vh;
     padding: 45px;
-    opacity: 0.9;
+    opacity: 0.99;
     padding-bottom: 0;
     
 
@@ -16,7 +16,7 @@
 .about-container h3 {
     color: rgb(0, 0, 0);
     font-size: 3rem;
-    background-color: #323232;
+    background-color: transparent;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -25,10 +25,10 @@
 }
 .about-content {
     height: 700px;
-    width: 1200px;
-    background-color: #3f3838;
-    opacity:0.87;
-    color:white;
+    width: 1600px;
+    background-color: none;
+    opacity:0.89;
+    color:rgb(161, 212, 181);
     padding-bottom: 5px;
     margin: 100px;
     border-radius: 10px;
@@ -38,7 +38,7 @@
     padding-right: 15px;
 }
 p {
-    font-size: 2.5rem;
+    font-size: 2rem;
     line-height: 1.5
 }
 
@@ -51,8 +51,8 @@ p {
 
 @media(max-width: 1360px){
     .about-content{
-        height: 500px;;
-        width: 550px; 
+        height: 100vh;;
+        width: 750px; 
         margin-left: 0;
         margin-right: 0;
         overflow: scroll;
@@ -67,7 +67,7 @@ p {
 }
 @media(max-width: 700px){
     .about-content{
-        height: 300px;;
+        height: 100vh;;
         width: 350px; 
         margin-left: 0;
         margin-right: 0;
@@ -83,7 +83,7 @@ p {
 @media(max-width: 350px){
     
     .about-content{
-        height: 150px;;
+        height: 250px;;
         width: 200px; 
         margin-left: 0;
         margin: 0;
