--- a/src/components/Greeting.css
+++ b/src/components/Greeting.css
@@ -71,12 +71,12 @@ h2 {
     color:rgb(255, 255, 255);  
 
 }
-.tech-icons i:hover {
-    transform: rotate(3.142rad);
-    color:rgba(250, 250, 0, 0.674);
+/* .tech-icons i:hover { */
+    /* transform: rotate(3.142rad); */
+    /* color:rgba(250, 250, 0, 0.674);
     transition: 500ms linear;
     text-shadow: 5px 5px 2px rgb(175, 175, 193);
-}
+} */
 
 .react-icons {
     display: inline-flex;
@@ -90,11 +90,11 @@ h2 {
     padding-right: 180px;
     
 }
-.vscode-icon:hover {
+/* .vscode-icon:hover {
      color: rgba(240, 236, 28, 0.752);
      transform: rotate(0.34turn) translateX(20px);
    
-}   
+}    */
 
 .vscode-icon {
     font-size: 3.5rem;
